# discollama

./: Dockerfile  LICENSE  Modelfile  README.md  compose.yaml  discollama.py  pyproject.toml
